[gd_scene load_steps=10 format=3 uid="uid://o8x3ltddbeyt"]

[ext_resource type="Script" path="res://main.gd" id="1_o7hg6"]
[ext_resource type="Texture2D" uid="uid://u87ed48gs3qj" path="res://assets/double_arrow.png" id="2_abetm"]
[ext_resource type="Texture2D" uid="uid://7q354wqshlx7" path="res://assets/arrow.png" id="3_h7q0h"]
[ext_resource type="Texture2D" uid="uid://dt3cxl5jr2fx1" path="res://assets/little_planet.png" id="3_rghj2"]
[ext_resource type="Texture2D" uid="uid://blk31pn2tayx0" path="res://assets/square_1000.png" id="4_iwnwu"]
[ext_resource type="Texture2D" uid="uid://cy2v0ifiksftc" path="res://assets/square_900.png" id="5_7twxf"]
[ext_resource type="FontFile" uid="uid://em87ecb2a6lk" path="res://assets/CONCHARS.png" id="7_3x2es"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_56wr6"]
size = Vector2(48, 48)

[sub_resource type="Gradient" id="Gradient_desa0"]
offsets = PackedFloat32Array(0.804167, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_o7hg6")

[node name="player" type="CharacterBody2D" parent="."]
position = Vector2(500, 500)

[node name="square_one" type="CollisionShape2D" parent="player"]
position = Vector2(300, 0)
shape = SubResource("RectangleShape2D_56wr6")

[node name="square_img_one" type="Sprite2D" parent="player/square_one"]
z_index = -1
texture = ExtResource("3_rghj2")

[node name="square_two" type="CollisionShape2D" parent="player"]
position = Vector2(300, 0)
shape = SubResource("RectangleShape2D_56wr6")

[node name="square_img_two" type="Sprite2D" parent="player/square_two"]
texture = ExtResource("3_rghj2")

[node name="counter" type="Node2D" parent="."]
position = Vector2(500, 500)

[node name="square_one" type="Sprite2D" parent="counter"]
position = Vector2(-150, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_rghj2")

[node name="square_two" type="Sprite2D" parent="counter"]
position = Vector2(-150, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_rghj2")

[node name="cardinal" type="Sprite2D" parent="."]
position = Vector2(500, 500)

[node name="up_point" type="Sprite2D" parent="cardinal"]
rotation = 3.14159
texture = ExtResource("3_h7q0h")
centered = false
offset = Vector2(-10, 0)
flip_v = true

[node name="right_point" type="Sprite2D" parent="cardinal"]
rotation = 4.71239
texture = ExtResource("3_h7q0h")
centered = false
offset = Vector2(-10, 0)
flip_v = true

[node name="down_point" type="Sprite2D" parent="cardinal"]
texture = ExtResource("3_h7q0h")
centered = false
offset = Vector2(-10, 0)
flip_v = true

[node name="left_point" type="Sprite2D" parent="cardinal"]
rotation = 1.5708
texture = ExtResource("3_h7q0h")
centered = false
offset = Vector2(-10, 0)
flip_v = true

[node name="ordinal" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.196078)
position = Vector2(500, 500)

[node name="one_five" type="Sprite2D" parent="ordinal"]
rotation = 0.785398
texture = ExtResource("2_abetm")

[node name="three_seven" type="Sprite2D" parent="ordinal"]
rotation = -0.785398
texture = ExtResource("2_abetm")

[node name="outer_ring" type="Sprite2D" parent="."]
position = Vector2(500, 500)

[node name="1000" type="Sprite2D" parent="outer_ring"]
texture = ExtResource("4_iwnwu")

[node name="900" type="Sprite2D" parent="outer_ring"]
texture = ExtResource("5_7twxf")

[node name="outer_ring2" type="Sprite2D" parent="."]
position = Vector2(500, 500)

[node name="1000" type="Sprite2D" parent="outer_ring2"]
texture = ExtResource("4_iwnwu")

[node name="900" type="Sprite2D" parent="outer_ring2"]
texture = ExtResource("5_7twxf")

[node name="indicator" type="RichTextLabel" parent="."]
offset_left = 217.0
offset_top = 827.0
offset_right = 474.0
offset_bottom = 867.0
theme_override_fonts/normal_font = ExtResource("7_3x2es")

[node name="transition" type="CPUParticles2D" parent="."]
z_index = 2
position = Vector2(500, 500)
emitting = false
amount = 400
lifetime = 20.0
one_shot = true
preprocess = 0.5
explosiveness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(10, 10)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 100.0
angular_velocity_min = 33.75
angular_velocity_max = 33.75
color_ramp = SubResource("Gradient_desa0")
